--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev" : "nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +27,7 @@
     "nodemon": "^1.19.4",
     "shortid": "^2.2.15",
     "slugify": "^1.3.5",
-    "string-strip-html": "^4.3.5"
+    "string-strip-html": "^4.3.5",
+    "text2png": "^2.3.0"
   }
 }
